# TalentFlow-AI-2.0

./: .env.example  .gitignore  Dockerfile  FINAL_SUMMARY.md  FIXES_APPLIED.md  FULL_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_RUNNING.md  QUICK_START.md  README.md  create_agents.py  docker-compose.yml  execution.md  pyproject.toml  render.yaml  requirements.txt  scaffold_frontend.py  start.ps1  start.sh
.claude/: launch.json
agents/: __init__.py
agents/background_agent/: README.md  __init__.py  agent.py  controller.py  firebase.py  models.py  prompts.py  schemas.py  service.py  utils.py
agents/decision_agent/: README.md  __init__.py  agent.py  controller.py  firebase.py  models.py  prompts.py  recommendation.py  report.py  schemas.py  score_engine.py  service.py  utils.py
agents/interview_agent/: README.md  __init__.py  agent.py  controller.py  firebase.py  models.py  proctoring_store.py  prompts.py  schemas.py  service.py  session.py  utils.py  vision.py
agents/matching_agent/: README.md  __init__.py  agent.py  controller.py  education.py  experience.py  firebase.py  matcher.py  models.py  prompts.py  schemas.py  service.py  skills.py  utils.py
agents/notification_agent/: README.md  agent.py  controller.py  firebase.py  models.py  schemas.py  service.py
agents/orchestrator/: __init__.py  agent.py  router.py  (+2 more)
backend/: __init__.py  app.py  config.py  logger.py  main.py
docs/: agent_workflow.md  api.md  architecture.md  firestore_schema.md  prompts.md
scripts/: cleanup_temp.py  create_indexes.py  migrate_data.py  seed_firestore.py
(+223 files in other folders)
