[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talentflow-ai"
version = "0.1.0"
description = "AI-powered recruitment platform"
authors = [
    { name = "TalentFlow Team", email = "team@talentflow.ai" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "firebase-admin>=6.5.0",
    "pymupdf>=1.24.0",
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    "opencv-python-headless>=4.10.0",
    "mediapipe>=0.10.14",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
